# vellum-python-sdks

./: .coverage  .fernignore  .gitignore  .pre-commit-config.yaml  APO-1836-implementation-plan.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SLACK_TRIGGER_PLAN.md  TDD_PLAN.md  TRIGGER_ENTRYPOINT_SERIALIZATION.md  codecop-guidelines.md  conftest.py  context.md  investigation_summary.md  pyproject.toml  reference.md  requirements.txt  style_guide.md  vellum.lock.json
.claude-code/: pr-split-plan-v2.md  (+2 more)
examples/evals/github_actions/: README.md  eval.py  pyproject.toml  vellum.lock.json  workflow.py
examples/evals/github_actions/.github/workflows/: eval.yml
examples/evals/github_actions/nodes/: prompt_node.py
examples/evals/github_actions/oracle/: inputs.py  workflow.py
examples/evals/github_actions/oracle/nodes/: final_output.py
examples/evals/github_actions/test_cases/: basic_queries.json  complex_queries.json  edge_cases.json
examples/workflows/: pyproject.toml  triggers_example.py  vellum.lock.json
examples/workflows/chatbot/: README.md  chat.py  external_client.py  state.py  workflow.py
examples/workflows/chatbot/nodes/: append_assistant_message.py  append_user_message.py  chatbot_node.py
examples/workflows/chatbot_set_state/: README.md  inputs.py  sandbox.py  state.py
examples/workflows/chatbot_set_state/nodes/: __init__.py  agent.py  final_output.py
examples/workflows/continuous_state/: README.md  chat.py  external_client.py
examples/workflows/continuous_state/workflow/: sandbox.py  workflow.py
examples/workflows/custom_base_node/: README.md  chat.py  state.py  workflow.py
examples/workflows/custom_base_node/display/: workflow.py
examples/workflows/custom_base_node/nodes/: __init__.py  conditional_router.py  echo_request.py  error_node.py  exit_node.py  fibonacci.py  get_temperature.py  mock_networking_client.py  my_prompt.py
examples/workflows/custom_prompt_node/: README.md  sandbox.py  workflow.py
examples/workflows/custom_prompt_node/nodes/: bot_response.py  detect_tone_prompt.py  local_bedrock_node.py
examples/workflows/customer_support_q_a/: inputs.py  sandbox.py
examples/workflows/customer_support_q_a/display/: workflow.py
examples/workflows/customer_support_q_a/nodes/: __init__.py  answer_from_help_docs.py  answer_from_q_a_database.py  help_docs_lookup.py  q_a_bank_lookup.py
examples/workflows/document_parsing/: sandbox.py
examples/workflows/document_parsing/display/: workflow.py
examples/workflows/document_parsing/nodes/: __init__.py  extract_by_chat_history.py  extract_by_document_url.py
examples/workflows/extract_from_image_of_receipt/: sandbox.py  workflow.py
examples/workflows/extract_from_image_of_receipt/display/: workflow.py
examples/workflows/extract_from_image_of_receipt/nodes/: __init__.py  data_extractor.py  final_output.py
examples/workflows/file_uploads/: README.md  inputs.py  sandbox.py  workflow.py
examples/workflows/file_uploads/nodes/: __init__.py  final_output.py  upload_file_node.py  use_uploaded_file_node.py
examples/workflows/function_calling_demo/: inputs.py  sandbox.py  workflow.py
examples/workflows/function_calling_demo/display/: workflow.py
examples/workflows/function_calling_demo/nodes/: __init__.py  conditional_node.py  conditional_node_10.py  error_node.py  final_output.py  output_type.py  prompt_node.py
examples/workflows/image_processing/: sandbox.py  workflow.py
examples/workflows/image_processing/display/: workflow.py
examples/workflows/image_processing/nodes/: __init__.py  add_image_to_chat_history.py  final_output.py  summarize_image_by_chat_history.py  summarize_image_by_url_chat_history.py
examples/workflows/marketing_agent/: README.md  sandbox.py  workflow.py
examples/workflows/marketing_agent/display/: workflow.py
examples/workflows/marketing_agent/nodes/: __init__.py  final_output.py  linkedin_posting_agent.py  tool_calling_node.py
examples/workflows/mcp_demo/: README.md  chat.py  workflow.py
examples/workflows/mcp_demo/nodes/: execute_action_node.py  exit_node.py  mcp_client_node.py  my_prompt_node.py
examples/workflows/mcp_tool_calling_node_demo/: README.md  chat.py  workflow.py
examples/workflows/mcp_tool_calling_node_demo/nodes/: execute_action_node.py  mcp_client_node.py  my_prompt_node.py
examples/workflows/mcp_toolbox/: MCP Toolbox.ipynb  README.md  chat.py  tools.yaml  workflow.py
examples/workflows/mcp_toolbox/db/: Dockerfile  init.sql
examples/workflows/mcp_toolbox/nodes/: agent_node.py
examples/workflows/mcp_without_sdk/: README.md  state.py
examples/workflows/mcp_without_sdk/nodes/: mcp_http_client.py  my_prompt_node.py
examples/workflows/re_act_agent/display/: workflow.py
examples/workflows/re_act_agent/nodes/: __init__.py  agent_node.py  function_calls_to_json_array.py  should_handle_functions.py
examples/workflows/recent-workflow-doc-creator/: README.md  workflow.py
examples/workflows/reflection_agent/: sandbox.py  workflow.py
examples/workflows/reflection_agent/display/: workflow.py
examples/workflows/reflection_agent/nodes/: __init__.py  add_agent_message_to_chat_history.py  add_evaluator_message_to_chat_history.py  error_node.py  evaluator_agent.py  extract_status.py  final_output.py  needs_revision.py  problem_solver_agent.py
examples/workflows/router_classifier/: inputs.py  sandbox.py
examples/workflows/router_classifier/display/: workflow.py
examples/workflows/router_classifier/nodes/: __init__.py  advance_or_reject.py  evaluate_resume.py  write_next_round_email.py  write_rejection_email.py
examples/workflows/trust_center_q_a/: README.md  external.py  sandbox.py  workflow.py
examples/workflows/trust_center_q_a/display/: workflow.py
examples/workflows/trust_center_q_a/nodes/: __init__.py  answer_question.py  output_answer.py  output_user_question.py  search_results.py
examples/workflows/utils/: Dockerfile  networking.py
examples/workflows/vellum-feature-showcase/: README.md  workflow.py
(+3336 files in other folders)
