[project]
name = "vellum-ai"

[tool.poetry]
name = "vellum-ai"
version = "1.4.0"
description = ""
readme = "README.md"
authors = []
keywords = []
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "vellum", from = "src"}
]

[project.urls]
Repository = 'https://github.com/vellum-ai/vellum-python-sdks'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = ">=3.1.0,<4.0.0"
click = ">=8.1.7,<9.0.0"
docker = ">=7.1.0,<8.0.0"
httpx = ">=0.21.2"
openai = ">=1.0.0,<2.0.0"
orderly-set = "^5.2.2"
publication = "0.0.3"
pydantic = ">= 1.9.2"
pydantic-core = ">=2.18.2"
pydash = ">=7.0.0,<8.0.0"
python-dateutil = ">=2.8.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pytz = ">=2022.0,<2026.0"
pyyaml = ">=6.0.0,<7.0.0"
requests = ">=2.31.0,<3.0.0"
tomli = ">=2.0.0,<3.0.0"
typing_extensions = ">= 4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.13.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
black = "24.8.0"
deepdiff = "8.0.1"
flake8 = "7.1.1"
flake8-breakpoint = "1.1.0"
flake8-isort = "6.1.1"
flake8-print = "5.0.0"
flake8-pyproject = "1.2.3"
flake8-unused-arguments = "^0.0.13"
ipdb = "0.13.13"
ipython = "8.12.3"
isort = "5.13.2"
pre-commit = "3.5.0"
pytest-cov = "^4.0.0"
pytest-mock = "3.10.0"
pytest-timeout = "2.3.1"
requests-mock = "1.11.0"
ruff = "==0.11.5"
tomli_w = "1.1.0"
types-PyYAML = "6.0.12.20240808"
types-pytz = "2024.1.0.20240417"
types-requests = "2.32.0.20240712"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E402",  # Module level import not at top of file
    "E501",  # Line too long
    "E711",  # Comparison to `None` should be `cond is not None`
    "E712",  # Avoid equality comparisons to `True`; use `if ...:` checks
    "E721",  # Use `is` and `is not` for type comparisons, or `isinstance()` for insinstance checks
    "E722",  # Do not use bare `except`
    "E731",  # Do not assign a `lambda` expression, use a `def`
    "F821",  # Undefined name
    "F841"   # Local variable ... is assigned to but never used
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
