[tool.poetry]
name = "vellum-example-workflows"
version = "0.1.0"
description = "A list of ready to use examples to jump start your Vellum Workflow development experience"
authors = ["Vellum <devops@vellum.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
vellum-ai = "0.14.70"
boto3 = "^1.38.4"
mcp = "1.1.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[[tool.vellum.workflows]]
module = "custom_base_node"
container_image_name = "sdk-examples-utils"
container_image_tag = "1.0.3"

[[tool.vellum.workflows]]
module = "custom_prompt_node"
container_image_name = "sdk-examples-utils"
container_image_tag = "1.0.3"

[[tool.vellum.workflows]]
module = "mcp_demo"
container_image_name = "sdk-examples-utils"
container_image_tag = "1.0.4"

[[tool.vellum.workspaces]]
name = "aws-staging"
api_url = "AWS_STAGING_VELLUM_API_URL"
api_key = "AWS_STAGING_VELLUM_API_KEY"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
